update RESTful API
